issue chart not showing

--- a/src/Components/Cards/Cards.module.css
+++ b/src/Components/Cards/Cards.module.css
@@ -11,7 +11,7 @@
 }
 
 .recovered {
-    border-bottom: 10px solid rgba(0, 155, 0, 0.5)
+    border-bottom: 10px solid rgba(0, 255, 0, 0.5)
 }
 
 .deaths {
